# powerbi-cli

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  TUI_IMPLEMENTATION.md  TUI_VISUAL_ENHANCEMENTS.md  UV_INSTALLATION.md  capture_screenshots.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: docs-preview.yaml  docs-publish.yaml
changelog/: index.html
docs/: cache.md  index.md  tui.md
docs/references/: cli.md  index.md
docs/references/powerbi/: admin.md  app.md  base.md  index.md  io.md  report.md
pr-preview/pr-10/: objects.inv  sitemap.xml
pr-preview/pr-10/references/cli/: index.html
pr-preview/pr-10/search/: search_index.json
pr-preview/pr-10/tui/: index.html
pr-preview/pr-12/: index.html
pr-preview/pr-12/search/: search_index.json
pr-preview/pr-16/: objects.inv
pr-preview/pr-16/cache/: index.html
pr-preview/pr-16/references/powerbi/admin/: index.html
pr-preview/pr-16/references/powerbi/base/: index.html
pr-preview/pr-16/references/powerbi/io/: index.html
pr-preview/pr-16/references/powerbi/report/: index.html
pr-preview/pr-16/search/: search_index.json
pr-preview/pr-18/: objects.inv
pr-preview/pr-18/references/cli/: index.html
pr-preview/pr-18/references/powerbi/admin/: index.html
pr-preview/pr-18/search/: search_index.json
pr-preview/pr-22/: index.html  objects.inv
pr-preview/pr-22/search/: search_index.json
pr-preview/pr-24/references/: index.html
pr-preview/pr-24/references/powerbi/admin/: index.html
pr-preview/pr-26/: 404.html  objects.inv
pr-preview/pr-26/references/cli/: index.html
pr-preview/pr-26/references/powerbi/report/: index.html
pr-preview/pr-26/search/: search_index.json
pr-preview/pr-3/: sitemap.xml
pr-preview/pr-3/references/cli/: index.html
pr-preview/pr-3/references/powerbi/app/: index.html
pr-preview/pr-3/search/: search_index.json
pr-preview/pr-4/: objects.inv  sitemap.xml
pr-preview/pr-4/references/cli/: index.html
pr-preview/pr-4/references/powerbi/admin/: index.html
pr-preview/pr-4/references/powerbi/app/: index.html
pr-preview/pr-4/references/powerbi/io/: index.html
pr-preview/pr-4/search/: search_index.json
pr-preview/pr-6/: objects.inv
pr-preview/pr-6/references/cli/: index.html
pr-preview/pr-6/search/: search_index.json
pr-preview/pr-8/: sitemap.xml
pr-preview/pr-8/references/: index.html
pr-preview/pr-8/references/cli/: index.html
pr-preview/pr-8/search/: search_index.json
references/: index.html
references/cli/: index.html
references/powerbi/: index.html
references/powerbi/admin/: index.html
references/powerbi/app/: index.html
references/powerbi/base/: index.html
references/powerbi/io/: index.html
references/powerbi/report/: index.html
search/: search_index.json
src/pbi_cli/: auth.py  cache.py  cli.py  config.py  tui.py  tui_new.py  web.py
src/pbi_cli/powerbi/: app.py  base.py  io.py  report.py  workspace.py
src/pbi_cli/powerbi/admin/: __init__.py  report.py
tests/: test_cache.py  test_cli_auth_groups.py  test_cli_profile.py  test_cli_reports.py  test_cli_scan.py  test_cli_workspaces.py  test_config_windows_paths.py
