[tool.poetry]

name = "pbi_cli"
version = "0.1.1"
description = "Power BI Command Line Tool for managing Power BI projects."

packages = [{ include = "pbi_cli", from="src"}]

license = "MIT"
authors = ["L M <hi@leima.is>"]

readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
openpyxl = "^3.1.4"
click = "^8.1.7"
loguru = "^0.7.2"
requests = "^2.32.3"
python-slugify = "^8.0.4"
keyring = "^25.5.0"
pyyaml = "^6.0.1"
cloudpathlib = {extras = ["s3"], version = "^0.20.0"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pytest = "^8.3.3"
twine = "^6.1.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.6.11"
mkdocs-autorefs = "^1.4.1"
mkdocstrings = {version = "^0.29.1", extras = ["python"]}
mkdocs-jupyter = "^0.25.1"
mkdocs-click = "^0.9.0"

[tool.poetry.scripts]
pbi = "pbi_cli.cli:pbi"

[tool.poetry.requires-plugins]

poetry-plugin-export = ">=1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
