[project]
name = "pbi_cli"
version = "0.1.1"
description = "Power BI Command Line Tool for managing Power BI projects."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "L M", email = "hi@leima.is"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.2",
    "openpyxl>=3.1.4",
    "click>=8.1.7",
    "loguru>=0.7.2",
    "requests>=2.32.3",
    "python-slugify>=8.0.4",
    "keyring>=25.5.0",
    "pyyaml>=6.0.1",
    "cloudpathlib[s3]>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.4",
    "pytest>=8.3.3",
    "twine>=6.1.0",
]
docs = [
    "mkdocs-material>=9.6.11",
    "mkdocs-autorefs>=1.4.1",
    "mkdocstrings[python]>=0.29.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-click>=0.9.0",
]

[project.scripts]
pbi = "pbi_cli.cli:pbi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pbi_cli"]
